// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallPulse> <BallPulse> Mount: enzyme.mount 1`] = `
.css-4xz5wq> div:nth-child(1),
[data-css-4xz5wq]> div:nth-child(1) {
  animation: animation_52v9b3 0.75s -0.24s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s -0.24s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq> div:nth-child(2),
[data-css-4xz5wq]> div:nth-child(2) {
  animation: animation_52v9b3 0.75s -0.12s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s -0.12s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq> div:nth-child(3),
[data-css-4xz5wq]> div:nth-child(3) {
  animation: animation_52v9b3 0.75s 0.00s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s 0.00s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq > div,
[data-css-4xz5wq] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  display: inline-block;
  -webkit-animation-fill-mode: both;
}

<BallPulse
  loading={true}
>
  <div
    data-css-4xz5wq=""
  >
    <div />
    <div />
    <div />
  </div>
</BallPulse>
`;

exports[`<BallPulse> <BallPulse> Render: enzyme.render 1`] = `
.css-4xz5wq> div:nth-child(1),
[data-css-4xz5wq]> div:nth-child(1) {
  animation: animation_52v9b3 0.75s -0.24s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s -0.24s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq> div:nth-child(2),
[data-css-4xz5wq]> div:nth-child(2) {
  animation: animation_52v9b3 0.75s -0.12s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s -0.12s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq> div:nth-child(3),
[data-css-4xz5wq]> div:nth-child(3) {
  animation: animation_52v9b3 0.75s 0.00s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s 0.00s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq > div,
[data-css-4xz5wq] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  display: inline-block;
  -webkit-animation-fill-mode: both;
}

<div
  data-css-4xz5wq=""
>
  <div />
  <div />
  <div />
</div>
`;

exports[`<BallPulse> <BallPulse> Shallow: enzyme.shallow 1`] = `
.css-4xz5wq> div:nth-child(1),
[data-css-4xz5wq]> div:nth-child(1) {
  animation: animation_52v9b3 0.75s -0.24s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s -0.24s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq> div:nth-child(2),
[data-css-4xz5wq]> div:nth-child(2) {
  animation: animation_52v9b3 0.75s -0.12s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s -0.12s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq> div:nth-child(3),
[data-css-4xz5wq]> div:nth-child(3) {
  animation: animation_52v9b3 0.75s 0.00s infinite cubic-bezier(.2,.68,.18,1.08);
  -webkit-animation: animation_52v9b3 0.75s 0.00s infinite cubic-bezier(.2,.68,.18,1.08);
}

.css-4xz5wq > div,
[data-css-4xz5wq] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  display: inline-block;
  -webkit-animation-fill-mode: both;
}

<div
  data-css-4xz5wq=""
>
  <div />
  <div />
  <div />
</div>
`;
